# north-pole-buddy

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  handler.py  pyproject.toml  serverless.yml
.github/workflows/: sls_deploy.yml
npb/: app.py  handlers.py  openai.py  s3.py  strings.py  tgapp.py  utils.py
telegram_queries/: commands.json
tests/: test_app.py  update1.json
